--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,7 +5,8 @@
   <title>Dishes</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="">
+  <link rel="icon" type="image/x-icon" href="assets/img/logo.png">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
